[gd_scene load_steps=2 format=3 uid="uid://system_view_scene"]

[ext_resource type="Script" path="res://scenes/system_view/system_view.gd" id="1"]

[node name="SystemView" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.01, 0.01, 0.03, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="SystemLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 600.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.7, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 18
text = "System Name - Class G | 0 planets"

[node name="BackButton" type="Button" parent="UI"]
offset_left = 10.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 80.0
text = "< Back to Galaxy"

[node name="InstructionsLabel" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -60.0
offset_right = 300.0
offset_bottom = -10.0
theme_override_colors/font_color = Color(0.5, 0.6, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Click: Select | Right-click: LAND (selected) | Scroll: Zoom | Space: Orbits | M: 3D Flight | ESC: Back"
horizontal_alignment = 1

[node name="PlanetInfoPanel" type="PanelContainer" parent="UI"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -350.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 500.0

[node name="InfoLabel" type="RichTextLabel" parent="UI/PlanetInfoPanel"]
custom_minimum_size = Vector2(320, 450)
layout_mode = 2
bbcode_enabled = true
text = "Select a planet to view info"
scroll_active = true
